# playground

./: .gitignore  LICENSE  README.md
.fleet/: run.json
ai/.ipynb_checkpoints/: hastie.su.domains_ISLP_Labs_Jupyter_Notebooks_Ch2-statlearn-lab-checkpoint.ipynb
ai/Introduction To Probability, Second Edition/: Ch1.ipynb  Ch2.ipynb
ant/: README.md  build01.xml
as/basics/: README.md
clang/compiler_in_c/: main  main.c
clang/package/: CMakeLists.txt
cmake/Demo3/: CMakeLists.txt  main.cc
cmake/cmake-3.26.2-tutorial-source/Step1/: CMakeLists.txt  TutorialConfig.h.in  tutorial.cxx
cmakeapp/gtkxx/: .gitignore  CMakeLists.txt  base.cc  btn.cc  btn.hpp  btns.cc  entry_completion.cc  hello.cc  labels.cc  labels_window.cc  labels_window.hpp  main.cpp  progress_bar.cc  ranges.cc  ranges_window.cc  ranges_window.hpp  simple_entry.cc  spinbuttons.cc  world.cc  world.hpp
cplusplus/: unique_ptr_demo.cpp
cplusplus/ATourOfC++/: a.out  p24.cpp
cplusplus/TCPL/: FunctionObjects.cpp  P33.cpp  P34.cpp  P43.cpp  P45.cpp  README.md  a.out
cpp/: log.cpp
cpp/ATourOfC++/: p22.cpp  p23.cpp  p232.cpp  p31.cpp  p32.cpp
cpp/TCPL/: .gitignore  IO_v1  IO_v1.cc  README.md  array1  array1.cc  before_commit  before_commit.cpp  complex1.cpp  complex1.cpp1  complex1.h  complex_v1.cc  concurrency1.cpp  container.cc  dc  desk_calculator.cc  enumerations.cpp  enums1  enums1.cc  expression1  expression1.cc  function_object.cpp  map1  map1.cc  p01.cc  references1  references1.cc  square.cpp  static_assertions.cc  stream.cpp  struct1  struct1.cc  type_conversions.cpp  types  types.cc  vector1.cpp  vector2.cpp  vector3.cpp  vector4.cpp  vector_v2.cc  (+2 more)
cpp/TPL/: .cproject  .project  CMakeLists.txt  config.h.in  p02.cc
cpp/Templates/: copy-swap.cc  demo.cc  is_prime.cc  overall.cc  pointer-to-member01.cc  (+4 more)
cryptography/: 00-rsa-keypair.go  08-hmac.go  09-rsa-sign-verify.go  10-ecc-keypair.go  11-ecc-sign-verify.go  13-http-client0x02.go  13-http-server0x02.go  README.md  SSL.md  client.crt  client.key  eccPrivate.pem  eccPublic.pem  private.pem  public.pem  server.crt  server.key
ocaml/realworldocaml/: a.mly  book.json  chapter5_records.ml  chapter6_variants.ml  chapter6_variants2.ml  chapter6_variants3.ml  chapter7_error_handling.ml  chapter8.ml  dictionary.ml  dictionary.mli  dlist.ml  dlist.mli  dune  error_v2.ml  first_class_modules.ml  first_class_modules_v2.ml  freq.ml  gadts1.ml  gadts2.ml  increment.ml  intervals.ml  intervals_v2.ml  json1.ml  json2.ml  lexer1.mly  little_lang.ml  little_lang_gadt.ml  little_lang_type_safe.ml  map1.ml  query_handler.mli  query_handling.ml  variants1.ml  variants2.ml  variants3.ml
ocaml/realworldocaml/short_parser/: a.mly  dune
oz/: first.oz
plfa/: README.md
racket/: cake.rkt  collections.rkt  contracts.rkt  expression.rkt  extract.rkt  guide.rkt  init.rkt  milk.scrbl  module.rkt  mouse.scrbl  p01.rkt  park.rkt  physics.rkt  random-cake.rkt  straw.scrbl
rust-lang/: linux-install-1.10.3.1040.sh
sagemath/: Untitled.ipynb
sml/: README.md  p01.sml  p02.sml  p03.sml  p04.sml  p05.sml  p06.sml  p07.sml  p08.sml  p09.sml
tla+/: PaxosCommit.tla  TwoPhase.tla  calculator.cfg  calculator.old  calculator.out  calculator.tla  counters.tla  find_duplicates.tla  orchestrator.tla  pluscal.tla  reader_writer.tla  scratch.tla  sum.tla  test.tla
(+1188 files in other folders)
