cmake_minimum_required(VERSION 3.22)

set(CMAKE_C_COMPILER /usr/bin/gcc)
set(CMAKE_CXX_COMPILER /usr/bin/g++)

project(gtkxx)

set(CMAKE_CXX_STANDARD 20)

add_executable(gtkxx main.cpp)
add_executable(base base.cc)
add_executable(hello hello.cc world.cc)
add_executable(btns btns.cc btn.cc)
add_executable(ranges ranges.cc ranges_window.cc)
add_executable(labels labels.cc labels_window.cc)
add_executable(simple_entry simple_entry.cc)
add_executable(entry_completion entry_completion.cc)
add_executable(spinbuttons spinbuttons.cc)
add_executable(progressbar progress_bar.cc)

include(FindPkgConfig)
include(CMakePrintHelpers)
pkg_check_modules(DEPS REQUIRED gtkmm-4.0 sigc++-3.0)
include_directories(${DEPS_INCLUDE_DIRS})
cmake_print_variables(DEPS_INCLUDE_DIRS)
cmake_print_variables(DEPS_LIBRARIES)
target_link_libraries(gtkxx ${DEPS_LIBRARIES})
target_link_libraries(base ${DEPS_LIBRARIES})
target_link_libraries(hello ${DEPS_LIBRARIES})
target_link_libraries(btns ${DEPS_LIBRARIES})
target_link_libraries(ranges ${DEPS_LIBRARIES})
target_link_libraries(labels ${DEPS_LIBRARIES})
target_link_libraries(simple_entry ${DEPS_LIBRARIES})
target_link_libraries(entry_completion ${DEPS_LIBRARIES})
target_link_libraries(spinbuttons ${DEPS_LIBRARIES})
target_link_libraries(progressbar ${DEPS_LIBRARIES})

# find_package(sigc++ CONFIG REQUIRED)
